[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/GameWorld/MenuInterfaces/InventoryMenu/InventoryMenu.gd" type="Script" id=1]
[ext_resource path="res://src/SingleAudioPlayerQueue.tscn" type="PackedScene" id=2]
[ext_resource path="res://442161__isteak__enter-button-low-robotic.wav" type="AudioStream" id=3]
[ext_resource path="res://src/GameWorld/MenuInterfaces/419494__plasterbrain__high-tech-ui-cancel.wav" type="AudioStream" id=4]
[ext_resource path="res://src/GameWorld/MenuInterfaces/83517__woodingp__low-rumble-new-2.wav" type="AudioStream" id=5]
[ext_resource path="res://src/WhisperAudioPlayerQueue.tscn" type="PackedScene" id=8]

[node name="InventoryMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertLeftEndReached" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 4.862 )
stream = ExtResource( 3 )
volume_db = 2.0

[node name="AlertRightEndReached" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1280, 4.564 )
stream = ExtResource( 3 )
volume_db = 2.0

[node name="InputAssistAudio" type="AudioStreamPlayer" parent="."]

[node name="SpeechAudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="WhisperAudioPlayerQueue" parent="." instance=ExtResource( 8 )]

[node name="SimpleSFXQueue" parent="." instance=ExtResource( 2 )]

[node name="CloseMenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ConsumeSound" type="AudioStreamPlayer" parent="."]

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Reduce_Bass"
